--- a/source/admin/index.html
+++ b/source/admin/index.html
@@ -9,7 +9,7 @@
   <body>
     <!-- Include the script that builds the page and powers Netlify CMS -->
     <script
-      src="https://cdn.jsdelivr.net/npm/netlify-cms@2/dist/cms.js"
+      src="https:////cdn.jsdelivr.net/npm/netlify-cms@2/dist/cms.js"
       async
       defer
     ></script>
